--- a/python/GEO115_WEEK2/lab_task1.ipynb
+++ b/python/GEO115_WEEK2/lab_task1.ipynb
@@ -1,30 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "ecc788ab-76c3-4d9c-bfd5-bdb0928a93a6",
+   "cell_type": "markdown",
+   "id": "fa8c26ab",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Age: 30\n",
-      "Price: 9.99\n",
-      "Name: Alice\n",
-      "Is_student: True\n",
-      "Sum_value: 40\n",
-      "Product_value: 11.99\n",
-      "<class 'int'>\n",
-      "<class 'float'>\n",
-      "<class 'str'>\n",
-      "<class 'bool'>\n"
-     ]
-    }
-   ],
    "source": [
-    "\n"
+    "A Python script demonstrating the use of variables and data types"
    ]
   },
   {
@@ -92,14 +73,6 @@
    "source": [
     "type(age)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b461d4a-5a95-4660-9f5e-18e899464ed3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
